<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wed1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="radio_Bride">Bride</string>
    <string name="radio_Groom">Groom</string>
    <string name="radio_InvitesYes">Yes</string>
    <string name="radio_InvitesNo">No</string>
    <string name="radio_AttendingYes">Yes</string>
    <string name="radio_AttendingNo">No</string>
    <string name="radio_AttendingUndecided">Undecided</string>
    <string name="title_activity_update_guest">UpdateGuest</string>
    <string name="title_activity_listview">listview</string>
    <string name="title_activity_my_guest_list">MyGuestList</string>
    <string name="title_activity_delete_guest">DeleteGuest</string>
    <!--<string name="btn_display">Display</string>-->

    <string name="first_name_hint"><font size = "12">First Name</font></string>
    <string name="last_name_hint"><font size = "12">Last Name</font><font size = "11">\t( Optional )</font></string>
    <string name="search_guest_hint"><font size = "12" color = "#ffffff">Search Guest..</font></string>
    <string name="table_seat_no_hint"><font size = "12">Table Seat No</font></string>

</resources>
