<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.sep.wed1.UpdateGuest"
    android:background="#CF71AF">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="Guest name"
        android:textSize="15dp"
        android:id="@+id/UtextView_GuestName"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:inputType="textPersonName"
        android:hint="First Name"
        android:ems="10"
        android:id="@+id/UeditText_Fname"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/UtextView_GuestName"

        android:background="#FFFFFF"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:inputType="textPersonName"
        android:hint="Last Name"
        android:ems="10"
        android:id="@+id/UeditText_Lname"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/UeditText_Fname"
        android:background="#FFFFFF"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@+id/UeditText_Lname"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="Table Seat No"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:id="@+id/UtextView_SeatNo"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:inputType="textPersonName"
        android:hint="Table Seat No"
        android:ems="10"
        android:id="@+id/UeditText_SeatNo"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="1dp"
        android:layout_below="@+id/UtextView_SeatNo"
        android:background="#FFFFFF"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@+id/UeditText_SeatNo"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="Side"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:id="@+id/UtextView_Side"
        />


    <RadioGroup
        android:id="@+id/UradioSide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/UtextView_Side"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="1dp">

        <RadioButton
            android:id="@+id/UradioBride"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_Bride"
            android:checked="true"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/UradioGroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_Groom"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@+id/UradioSide"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="RSVP"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:id="@+id/UtextView_RSVP"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@+id/UtextView_RSVP"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="Invites Sent"
        android:textSize="15dp"
        android:layout_marginTop="1dp"
        android:id="@+id/UtextView_InvitesSent"
        />

    <RadioGroup
        android:id="@+id/UradioInvitesSent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/UtextView_InvitesSent"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="1dp">

        <RadioButton
            android:id="@+id/UradioButtonInvitesYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_InvitesYes"
            android:checked="true"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/UradioButtonInvitesNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_InvitesNo"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@+id/UradioInvitesSent"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="Attending "
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:id="@+id/UtextView_Attending"
        />

    <RadioGroup
        android:id="@+id/UradioAttending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/UtextView_Attending"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="1dp"
        android:onClick="onRadioButtonClicked">

        <RadioButton
            android:id="@+id/UradioButtonAttendingYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_AttendingYes"
            android:checked="true"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/UradioButtonAttendingNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_AttendingNo"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/UradioButtonAttendingUndecided"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_AttendingUndecided"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>



    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:id="@+id/UButton_Update"
        android:layout_below="@+id/UradioAttending"
        android:layout_marginLeft="20dp"

        android:text="Update"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:id="@+id/UButton_Cancel"
        android:layout_below="@+id/UradioAttending"
        android:layout_marginRight="20dp"
        android:layout_toRightOf="@+id/UButton_Update"
        android:text="Cancel"/>

</RelativeLayout>
