<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="#f1f1f1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Guest name"
                android:textSize="20dp"
                android:textColor="#000000"
                android:id="@+id/textView_GuestName"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:background="#d3d3d3"/>

            <TextView
                android:layout_marginBottom="5dp"
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:background="#f1f1f1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:background="#ffffff">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:hint="First Name"
                    android:id="@+id/editText_Fname"
                    android:background="@drawable/edit_text_selector"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:background="#ffffff">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="Last Name"
                    android:padding="10dp"
                    android:id="@+id/editText_Lname"
                    android:background="@drawable/edit_text_selector"/>

                </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_below="@+id/editText_Lname"
                android:text="Table Seat No"
                android:textSize="20dp"
                android:layout_marginTop="15dp"
                android:id="@+id/textView_SeatNo"
                android:textColor="#000000"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:background="#d3d3d3"/>

            <TextView
                android:layout_marginBottom="5dp"
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:background="#f1f1f1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:background="#ffffff">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:hint="Table Seat No"
                    android:id="@+id/editText_SeatNo"
                    android:background="@drawable/edit_text_selector"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginRight="20dp"
                android:text="Side"
                android:textSize="20dp"
                android:textColor="#000000"
                android:layout_marginTop="15dp"
                android:id="@+id/textView_Side"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:background="#d3d3d3"/>

            <TextView
                android:layout_marginBottom="5dp"
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:background="#f1f1f1"/>

            <RadioGroup
                android:id="@+id/radioSide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_Side"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="1dp">

                <RadioButton
                    android:id="@+id/radioBride"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_Bride"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"/>

                <RadioButton
                    android:id="@+id/radioGroom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/radio_Groom"
                    android:onClick="onRadioButtonClicked"/>

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_below="@+id/radioSide"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:text="RSVP"
                android:textSize="15dp"
                android:layout_marginTop="10dp"
                android:id="@+id/textView_RSVP"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_below="@+id/textView_RSVP"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:text="Invites Sent"
                android:textSize="15dp"
                android:layout_marginTop="1dp"
                android:id="@+id/textView_InvitesSent"
                />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#d3d3d3"/>

            <TextView
                android:layout_marginBottom="5dp"
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#f1f1f1"/>

            <RadioGroup
                android:id="@+id/radioInvitesSent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_InvitesSent"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="1dp">

                <RadioButton
                    android:id="@+id/radioButtonInvitesYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_InvitesYes"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"/>

                <RadioButton
                    android:id="@+id/radioButtonInvitesNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/radio_InvitesNo"
                    android:onClick="onRadioButtonClicked"/>

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:text="Attending "
                android:textSize="15dp"
                android:layout_marginTop="10dp"
                android:id="@+id/textView_Attending"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#d3d3d3"/>

            <TextView
                android:layout_marginBottom="5dp"
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#f1f1f1"/>

            <RadioGroup
                android:id="@+id/radioAttending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_Attending"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="1dp"
                android:onClick="onRadioButtonClicked">

                <RadioButton
                    android:id="@+id/radioButtonAttendingYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_AttendingYes"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"/>

                <RadioButton
                    android:id="@+id/radioButtonAttendingNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_AttendingNo"
                    android:onClick="onRadioButtonClicked"/>

                <RadioButton
                    android:id="@+id/radioButtonAttendingUndecided"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_AttendingUndecided"
                    android:onClick="onRadioButtonClicked"/>

            </RadioGroup>

            <!--<Button-->
                <!--android:id="@+id/btnDisplay"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/btn_display"-->
                <!--/>-->

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:background="#d3d3d3"/>

            <TextView
                android:layout_marginBottom="5dp"
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:background="#f1f1f1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:id="@+id/Button_OK"
                    android:textColor="#ffffff"
                    android:background="@drawable/add_guest_button_selector"
                    android:text="OK"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:id="@+id/Button_Cancel"
                    android:textColor="#ffffff"
                    android:background="@drawable/add_guest_button_selector"
                    android:layout_marginLeft="10dp"
                    android:text="Cancel"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>